layout changes and added initial items in the datbase on creation

--- a/webshop/webshop.csproj
+++ b/webshop/webshop.csproj
@@ -218,6 +218,7 @@
       <DependentUpon>201612111043188_Productdateadded.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\ShoppingCart.cs" />
     <Compile Include="ViewModel\AccountViewModels.cs" />
     <Compile Include="Models\Cart.cs" />
@@ -234,6 +235,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\etalage.css" />
     <Content Include="Content\images\cart-icon.png" />
     <Content Include="Content\images\cart.png" />
     <Content Include="Content\images\email.png" />
@@ -1027,6 +1029,7 @@
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.etalage.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
