added add to cart function with feedback to cartsummarypartial

--- a/webshop/webshop.csproj
+++ b/webshop/webshop.csproj
@@ -1085,6 +1085,7 @@
     <Content Include="Views\Categories\Edit.cshtml" />
     <Content Include="Views\Categories\Index.cshtml" />
     <Content Include="Scripts\version.json" />
+    <Content Include="Views\ShoppingCart\_CartSummaryPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
