fixed some layout flaws & added first draft of angularjs shoppingcart index page

--- a/webshop/webshop.csproj
+++ b/webshop/webshop.csproj
@@ -1085,7 +1085,8 @@
     <Content Include="Views\Categories\Edit.cshtml" />
     <Content Include="Views\Categories\Index.cshtml" />
     <Content Include="Scripts\version.json" />
-    <Content Include="Views\ShoppingCart\_CartSummaryPartial.cshtml" />
+    <Content Include="Views\Cart\_CartSummaryPartial.cshtml" />
+    <Content Include="Views\Cart\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
